--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
 <body>
 
   <div class="wrapper">
-    <h1>Financeee Logger</h1>
+    <h1>Finance Logger</h1>
 
     <!-- output list -->
     <ul class="item-list">
@@ -43,6 +43,6 @@
     <a href="https://www.thenetninja.co.uk">The Net Ninja</a>
   </footer>
 
-  <script src='sandbox.js'></script>
+  <script src='app.js'></script>
 </body>
 </html>
